# ai-ready-data-framework

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTORS.md  Dockerfile  Makefile  README.md  definitions.md  pytest.ini
agent/: __init__.py  __main__.py  cli.py  context.py  discover.py  execute.py  generate.py  interview.py  manifest.py  platforms.py  pyproject.toml  report.py  score.py  storage.py
agent/queries/ansi-sql/: ai_compatible_type_rate.sql  distinct_count.sql  duplicate_detection.sql  format_consistency.sql  naming_consistency.sql  null_rate.sql  pii_column_name_scan.sql  pii_pattern_scan.sql  table_freshness.sql  timestamp_column_coverage.sql  type_consistency.sql  value_distribution.sql  zero_negative_check.sql
agent/queries/databricks/: access_audit.sql  column_lineage.sql  column_tags.sql  schema_evolution.sql  table_freshness.sql  table_lineage.sql  table_properties.sql
agent/queries/iceberg/: column_statistics.sql  manifest_statistics.sql  partition_evolution.sql  schema_evolution.sql  snapshot_freshness.sql  snapshot_history.sql  table_properties.sql
agent/queries/information-schema/: column_comment_coverage.sql  column_comments.sql  column_metadata.sql  constraint_coverage.sql  constraints.sql  foreign_key_coverage.sql  rbac_coverage.sql  table_comment_coverage.sql  table_inventory.sql
agent/queries/otel/: access_log_analysis.sql  pipeline_error_rate.sql  pipeline_freshness.sql  pipeline_latency.sql  pipeline_lineage.sql  pipeline_span_depth.sql  throughput_analysis.sql
agent/queries/snowflake/: access_history.sql  copy_history_errors.sql  dynamic_tables.sql  masking_policy_coverage.sql  pipe_status.sql  query_history_summary.sql  table_freshness.sql  table_storage_metrics.sql
agent/remediation/: ai_compatible_type_rate.md  column_comment_coverage.md  constraint_coverage.md  duplicate_rate.md  foreign_key_coverage.md  max_staleness_hours.md  naming_consistency.md  null_rate.md  pii_column_name_rate.md  pii_detection_rate.md  rbac_coverage.md  table_comment_coverage.md  timestamp_column_coverage.md
agent/schema/: report.json  test-result.json  thresholds-default.json
agent/suites/: __init__.py  base.py  common.py  snowflake.py
content/: factor-00-clean.md  factor-01-clean.md  factor-02-consumable.md  (+6 more)
skills/compare/: .env.example  SKILL.md  pyproject.toml
skills/discover/: .env.example  SKILL.md  pyproject.toml
skills/interpret/: .env.example  SKILL.md  pyproject.toml
(+56 files in other folders)
