[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aird-agent"
version = "0.1.0"
description = "AI-Ready Data Assessment Agent -- vendor-neutral, open-standards-first"
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = [
    "pyyaml",
    "rich",
]

[project.optional-dependencies]
snowflake = ["snowflake-connector-python"]
databricks = ["databricks-sql-connector"]
postgres = ["psycopg2-binary"]
duckdb = ["duckdb"]
all = ["snowflake-connector-python", "databricks-sql-connector", "psycopg2-binary", "duckdb"]
dev = ["pytest", "pytest-cov", "ruff", "duckdb"]

[project.scripts]
aird = "agent.cli:main"

[tool.setuptools.packages.find]
include = ["agent*"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.coverage.run]
source = ["agent"]
omit = ["agent/__main__.py"]

[tool.coverage.report]
show_missing = true
fail_under = 60
