[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aird-discover"
version = "0.1.0"
description = "AI-Ready Data Assessment skill: schema and table discovery"
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = [
    "aird-agent",
]

[tool.uv.sources]
aird-agent = { git = "https://github.com/jacobprall/factors-staging", subdirectory = "agent" }
